feat : making dataset 10000

--- a/02.code_similar/making_dataset.ipynb
+++ b/02.code_similar/making_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,163 +12,98 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "\n",
+    "from itertools import product"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = './dataset/code'\n",
+    "labels = os.listdir(data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 용량 초과....\n",
+    "\n",
+    "# with open('data_df.csv','w',encoding='utf8') as f:\n",
+    "#     f.write('code1,code2,similar')\n",
+    "#     for label1, label2 in tqdm(product(labels, repeat=2),total=len(labels)**2):\n",
+    "#         for code1_src, code2_src in product(os.listdir(data_path+label1),os.listdir(data_path+label2)):\n",
+    "#             if not code1_src==code2_src:\n",
+    "#                 code1 = (data_path+label1+'/'+code1_src)\n",
+    "#                 code2 = (data_path+label2+'/'+code2_src)\n",
+    "#                 if label1==label2:\n",
+    "#                     similar = 1\n",
+    "#                 else:\n",
+    "#                     similar = 0\n",
+    "#             f.write(\"{},{},{}\".format(code1,code2,similar))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:00<00:00, 315.45it/s]\n"
+      "100%|██████████| 10000/10000 [00:48<00:00, 205.17it/s]\n"
      ]
     }
    ],
    "source": [
-    "data_path = './dataset/code/'\n",
-    "labels = os.listdir(data_path)\n",
-    "source_list = []\n",
-    "for label in tqdm(labels):\n",
-    "    for source in os.listdir(data_path+label):\n",
-    "        source_path = data_path+label+'/'+source\n",
-    "        source_list.append(source_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./dataset/code/problem001/problem001_1.py',\n",
-       " './dataset/code/problem001/problem001_10.py',\n",
-       " './dataset/code/problem001/problem001_100.py',\n",
-       " './dataset/code/problem001/problem001_101.py',\n",
-       " './dataset/code/problem001/problem001_102.py']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "source_list[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "45101"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(source_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n",
-      "['./dataset/code/problem245/problem245_144.py'\n",
-      " './dataset/code/problem033/problem033_97.py']\n"
-     ]
-    }
-   ],
-   "source": [
-    "sample = np.random.choice(source_list,2)\n",
-    "print(type(sample))\n",
-    "print(sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['.', 'dataset', 'code', 'problem015', 'problem015_106.py']\n",
-      "./dataset/code/problem015\n",
-      "['problem001', 'problem002', 'problem003', 'problem004', 'problem005']\n"
-     ]
-    }
-   ],
-   "source": [
-    "code = sample[0].split('/')\n",
-    "print(code)\n",
-    "print('/'.join(code[:-1]))\n",
-    "print(labels[:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:43<00:00, 23.18it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "num_sample = 1000\n",
+    "import config\n",
+    "num_sample = config.num_sample\n",
     "data_dict = {\"code1\":[], \"code2\":[], \"similar\":[]}\n",
     "\n",
-    "for _ in tqdm(range(num_sample)):\n",
-    "    sample = np.random.choice(source_list,2)\n",
-    "    code1 = sample[0].split('/')\n",
-    "    code2 = sample[1].split('/')\n",
-    "    \n",
-    "    if code1[-2] == code2[-2]: similar = 1\n",
-    "    else: similar = 0\n",
-    "    \n",
-    "    data_dict['code1'].append(sample[0])\n",
-    "    data_dict['code2'].append(sample[1])\n",
+    "for i in tqdm(range(num_sample)):\n",
+    "    if i % 2 ==0:\n",
+    "        sample = np.random.choice(labels,2,replace=False).tolist()\n",
+    "        code1_src = np.random.choice(os.listdir('/'.join([data_path,sample[0]])))\n",
+    "        code2_src = np.random.choice(os.listdir('/'.join([data_path,sample[1]])))\n",
+    "        similar = 0\n",
+    "        # print(sample)\n",
+    "        code1_path = '/'.join([data_path,sample[0],code1_src])\n",
+    "        code2_path = '/'.join([data_path,sample[1],code2_src])\n",
+    "        # print(code1_path)\n",
+    "    else:\n",
+    "        label = (np.random.choice(labels))\n",
+    "        code_src = np.random.choice(os.listdir('/'.join([data_path,label])),2,replace=False).tolist()\n",
+    "        similar = 1\n",
+    "        \n",
+    "        code1_path = '/'.join([data_path,label,code_src[0]])\n",
+    "        code2_path = '/'.join([data_path,label,code_src[1]])\n",
+    "        \n",
+    "    data_dict['code1'].append(code1_path)\n",
+    "    data_dict['code2'].append(code2_path)\n",
     "    data_dict['similar'].append(similar)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    998\n",
-       "1      2\n",
+       "0    5000\n",
+       "1    5000\n",
        "Name: similar, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -212,32 +147,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>./dataset/code/problem144/problem144_147.py</td>\n",
-       "      <td>./dataset/code/problem264/problem264_78.py</td>\n",
+       "      <td>./dataset/code/problem028/problem028_112.py</td>\n",
+       "      <td>./dataset/code/problem085/problem085_1.py</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>./dataset/code/problem133/problem133_75.py</td>\n",
-       "      <td>./dataset/code/problem187/problem187_38.py</td>\n",
-       "      <td>0</td>\n",
+       "      <td>./dataset/code/problem246/problem246_49.py</td>\n",
+       "      <td>./dataset/code/problem246/problem246_125.py</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>./dataset/code/problem268/problem268_111.py</td>\n",
-       "      <td>./dataset/code/problem052/problem052_35.py</td>\n",
+       "      <td>./dataset/code/problem097/problem097_90.py</td>\n",
+       "      <td>./dataset/code/problem204/problem204_26.py</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>./dataset/code/problem103/problem103_36.py</td>\n",
-       "      <td>./dataset/code/problem182/problem182_151.py</td>\n",
-       "      <td>0</td>\n",
+       "      <td>./dataset/code/problem071/problem071_13.py</td>\n",
+       "      <td>./dataset/code/problem071/problem071_94.py</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>./dataset/code/problem169/problem169_10.py</td>\n",
-       "      <td>./dataset/code/problem183/problem183_2.py</td>\n",
+       "      <td>./dataset/code/problem281/problem281_139.py</td>\n",
+       "      <td>./dataset/code/problem300/problem300_109.py</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -246,21 +181,21 @@
       ],
       "text/plain": [
        "                                         code1  \\\n",
-       "0  ./dataset/code/problem144/problem144_147.py   \n",
-       "1   ./dataset/code/problem133/problem133_75.py   \n",
-       "2  ./dataset/code/problem268/problem268_111.py   \n",
-       "3   ./dataset/code/problem103/problem103_36.py   \n",
-       "4   ./dataset/code/problem169/problem169_10.py   \n",
+       "0  ./dataset/code/problem028/problem028_112.py   \n",
+       "1   ./dataset/code/problem246/problem246_49.py   \n",
+       "2   ./dataset/code/problem097/problem097_90.py   \n",
+       "3   ./dataset/code/problem071/problem071_13.py   \n",
+       "4  ./dataset/code/problem281/problem281_139.py   \n",
        "\n",
        "                                         code2  similar  \n",
-       "0   ./dataset/code/problem264/problem264_78.py        0  \n",
-       "1   ./dataset/code/problem187/problem187_38.py        0  \n",
-       "2   ./dataset/code/problem052/problem052_35.py        0  \n",
-       "3  ./dataset/code/problem182/problem182_151.py        0  \n",
-       "4    ./dataset/code/problem183/problem183_2.py        0  "
+       "0    ./dataset/code/problem085/problem085_1.py        0  \n",
+       "1  ./dataset/code/problem246/problem246_125.py        1  \n",
+       "2   ./dataset/code/problem204/problem204_26.py        0  \n",
+       "3   ./dataset/code/problem071/problem071_94.py        1  \n",
+       "4  ./dataset/code/problem300/problem300_109.py        0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,6 +203,97 @@
    "source": [
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   code1    10000 non-null  object\n",
+      " 1   code2    10000 non-null  object\n",
+      " 2   similar  10000 non-null  int64 \n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 234.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 9996 entries, 0 to 9999\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   code1    9996 non-null   object\n",
+      " 1   code2    9996 non-null   object\n",
+      " 2   similar  9996 non-null   int64 \n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 312.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.drop_duplicates(inplace=True)\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    5000\n",
+       "1    4996\n",
+       "Name: similar, dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.similar.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('./dataset/data_df.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
