fix : input pipeline

--- a/02.code_similar/model1.ipynb
+++ b/02.code_similar/model1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 1591564042825303678\n",
+      "incarnation: 17058056597220578996\n",
       "xla_global_id: -1\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
@@ -78,7 +78,7 @@
       "  links {\n",
       "  }\n",
       "}\n",
-      "incarnation: 6036172381659849699\n",
+      "incarnation: 10419822531697493751\n",
       "physical_device_desc: \"device: 0, name: NVIDIA GeForce GTX 1650 with Max-Q Design, pci bus id: 0000:01:00.0, compute capability: 7.5\"\n",
       "xla_global_id: 416903419\n",
       "]\n"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "4  ./dataset/code/problem300/problem300_109.py        0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "45101"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -282,14 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 45101/45101 [00:12<00:00, 3714.84it/s]\n"
+      "100%|██████████| 45101/45101 [00:19<00:00, 2345.91it/s]\n"
      ]
     },
     {
@@ -298,7 +298,7 @@
        "45101"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -386,14 +386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 45101/45101 [00:08<00:00, 5612.60it/s]\n"
+      "100%|██████████| 45101/45101 [00:09<00:00, 5005.66it/s]\n"
      ]
     }
    ],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -480,14 +480,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 45101/45101 [01:49<00:00, 413.44it/s] \n"
+      "100%|██████████| 45101/45101 [01:47<00:00, 421.27it/s] \n"
      ]
     }
    ],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,17 +540,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "AUTOTUNE = tf.data.experimental.AUTOTUNE\n",
-    "BATCH_SIZE = 32"
+    "BATCH_SIZE = cfg.batch_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,36 +569,88 @@
     "    return pad_sequences\n",
     "    \n",
     "def make_dataset(code1_paths,code2_paths,similar):\n",
-    "    # code1_tensor = make_tensor(code1_paths)\n",
-    "    # print(f\"{code1_tensor.shape=}\")\n",
-    "    # code2_tensor = make_tensor(code2_paths)\n",
-    "    # print(f\"{code2_tensor.shape=}\")\n",
-    "    code1_files_ds = tf.data.Dataset.from_tensor_slices(code1_paths)\n",
-    "    code2_files_ds = tf.data.Dataset.from_tensor_slices(code2_paths)\n",
-    "    code1_ds = code1_files_ds.map(\n",
-    "        make_tensor,\n",
-    "        num_parallel_calls=AUTOTUNE\n",
-    "    )\n",
-    "    code2_ds = code2_files_ds.map(\n",
-    "        make_tensor,\n",
-    "        num_parallel_calls=AUTOTUNE\n",
-    "    )\n",
-    "    similar_ds = tf.data.Dataset.from_tensor_slices(similar)\n",
-    "    code_ds = tf.data.Dataset.zip((code1_ds,code2_ds))\n",
-    "    ds = tf.data.Dataset.zip((code_ds,similar_ds))\n",
+    "    \n",
+    "    code1_tensor = make_tensor(code1_paths)\n",
+    "    print(f\"{code1_tensor.shape=}\")\n",
+    "    code2_tensor = make_tensor(code2_paths)\n",
+    "    print(f\"{code2_tensor.shape=}\")\n",
+    "    \n",
+    "    ds = tf.data.Dataset.from_tensor_slices((\n",
+    "        {\n",
+    "            \"code1\":code1_tensor, \"code2\":code2_tensor\n",
+    "        },\n",
+    "        {\n",
+    "            \"outputs\":similar\n",
+    "        }\n",
+    "    ))\n",
+    "    \n",
+    "    # code1_files_ds = tf.data.Dataset.from_tensor_slices(code1_paths)\n",
+    "    # code2_files_ds = tf.data.Dataset.from_tensor_slices(code2_paths)\n",
+    "    # similar_ds = tf.data.Dataset.from_tensor_slices(similar)\n",
+    "    \n",
+    "    # code1_ds = code1_files_ds.map(\n",
+    "    #     make_tensor,\n",
+    "    #     num_parallel_calls=AUTOTUNE\n",
+    "    # )\n",
+    "    # code2_ds = code2_files_ds.map(\n",
+    "    #     make_tensor,\n",
+    "    #     num_parallel_calls=AUTOTUNE\n",
+    "    # )\n",
+    "    # code_ds = tf.data.Dataset.zip((code1_ds,code2_ds))\n",
+    "    # ds = tf.data.Dataset.zip((code_ds,similar_ds))\n",
+    "    \n",
     "    return ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tensorflow.python.framework.ops.EagerTensor'>\n",
+      "if __name__ == \"__main__\":\n",
+      "    n, m = map(int, input().split())\n",
+      "    c = list(map(int, input().split()))\n",
+      "    c = sorted(c)\n",
+      "\n",
+      "    dp = [[0] * (n + 1)] * m\n",
+      "\n",
+      "    for i in range(n + 1):\n",
+      "        dp[0][i] = i\n",
+      "    \n",
+      "    for i in range(1, m):\n",
+      "        for j in range(n + 1):\n",
+      "            dp[i][j] = dp[i - 1][j]\n",
+      "            if j - c[i] >= 0:\n",
+      "                dp[i][j] = min(dp[i][j], dp[i][j - c[i]] + 1)\n",
+      "    print(dp[m-1][n])\n",
+      "        \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "code1_files_ds = tf.data.Dataset.from_tensor_slices(data_df['code1'])\n",
+    "for i in code1_files_ds.take(1):\n",
+    "    code1 = tf.io.read_file(i)\n",
+    "    print(type(code1))\n",
+    "    print(code1.numpy().decode('utf8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9996/9996 [00:04<00:00, 2070.42it/s]\n"
+      "100%|██████████| 9996/9996 [00:06<00:00, 1549.53it/s]\n"
      ]
     },
     {
@@ -612,7 +664,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9996/9996 [00:05<00:00, 1982.14it/s]\n"
+      "100%|██████████| 9996/9996 [00:06<00:00, 1567.38it/s]\n"
      ]
     },
     {
@@ -629,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
